Prevent overlapping items in term pages (i.e. Tags and Categories)

--- a/assets/sass/components/_terms.scss
+++ b/assets/sass/components/_terms.scss
@@ -1,15 +1,19 @@
 .terms {
-    a {
-        padding: .75rem 1.25rem;
-        margin: 0 .25rem;
-        font-size: 1.2rem;
-        font-weight: 400;
-        color: var(--font-color);
-        border-radius: .35rem;
+  display: flex;
+  flex-wrap: wrap;
 
-        &:hover {
-            background: var(--light-background);
-            color: var(--dark-font-color);
-        }
+  a {
+    padding: 0.75rem 1.25rem;
+    margin: 0.25rem 0.25rem;
+    font-size: 1.2rem;
+    font-weight: 400;
+    color: var(--font-color);
+    border-radius: 0.35rem;
+    line-spacing: 2rem;
+
+    &:hover {
+      background: var(--light-background);
+      color: var(--dark-font-color);
     }
+  }
 }
